<resources>
    <string name="app_name">Extra Settings</string>
    <string name="action_settings">Settings</string>
    <string name="follow_me">Follow Me on Weibo</string>
    <string name="follow_me_title">Follow Me</string>
    <string name="about_title">About</string>
    <string name="follow_me_bili">Follow me on BiliBili</string>
    <string name="donate_me_wechat">Donate me by Wechat Payment</string>
    <string name="donate_me_alipay">Donate me by Alipay</string>
    <string name="author">Author</string>
    <string name="reboot_recovery">Reboot to Recovery</string>
    <string name="reboot_bl">Reboot to Bootloader</string>
    <string name="reboot_title">Advanced Reboot</string>
    <string name="gesture_title">Gesture</string>
    <string name="slide">Slide Cover</string>
    <string name="pat">Pat a Pat</string>
    <string name="chop">Chop a Chop</string>
    <string name="camgest">Turn a turn</string>
    <string name="misc_title">Misc</string>
    <string name="slide_to_answer">Slide to Answer</string>
    <string name="slide_to_answer_summary">Slide to answer incoming calls</string>
    <string name="slide_to_reject">Close Slide to Reject</string>
    <string name="slide_to_reject_summary">Close the Slip Cover to reject the incoming calls</string>
    <string name="vibrate_on_slide">Vibrate when slide</string>
    <string name="vibrate_on_slide_summary">Do Vibrator when open or close the Slip Cover</string>
    <string name="vibrate_on_gesture">Vibrate when Gesture</string>
    <string name="vibrate_on_gesture_summary">Vibrate when the gesture is triggered</string>
    <string name="cpu_mode">Performance Policy</string>
    <string name="play_sound_on_slide">Play Sound When Slide</string>
    <string name="play_sound_on_slide_summary">Play some sound when sliding up and down the slider</string>
    <string name="custom_sound_on_slide_title">Custom Slide Sound</string>
    <string name="default_value" />

    <!-- Dolby -->
    <string name="ai_dolby_atmos_explanation">Analysis of acoustical signal source features and matching of appropriate sound modes</string>
    <string name="ai_dolby_atmos_mode">Moderate mode</string>
    <string name="ai_dolby_audio_mode_describe">Dolby Atmos® is Dolby Laboratories’ most advanced audio-visual platform. The %1$s %2$s.</string>
    <string name="ai_dolby_audio_mode_four_dimensional_text">ultra-linear 4D sound system comes with Dolby Atmos for enhanced sound quality and exceptional mobile audiovisual experience</string>
    <string name="ai_dolby_audio_mode_no_four_dimensional_text">distinctive sound system comes with Dolby Atmos for enhanced sound quality and exceptional mobile audiovisual experience</string>
    <string name="ai_dolby_effect_tv_1">Smart identification</string>
    <string name="ai_dolby_effect_tv_2">Realistic movies</string>
    <string name="ai_dolby_effect_tv_3">Delicate music</string>
    <string name="close_dolby_atmos_explanation">"Dolby Atmos® delivers powerful, moving audio on your phone to make you feel as you're inside the action."</string>
    <string name="close_dolby_atmos_mode">Close</string>
    <string name="dolby_atmos_mode">Dolby Mode</string>
    <string name="dolby_atmos_title">Dolby Atmos</string>
    <string name="dolby_atmos_title_summary">通过萦绕于四周且引人入胜的流动音效，来营造身临其境的听觉体验。</string>
    <string name="dolby_equalizer_frequency_15K">15K</string>
    <string name="dolby_equalizer_frequency_1K">1K</string>
    <string name="dolby_equalizer_frequency_235">235</string>
    <string name="dolby_equalizer_frequency_2K">2K</string>
    <string name="dolby_equalizer_frequency_485">485</string>
    <string name="dolby_equalizer_frequency_4K">4K</string>
    <string name="dolby_equalizer_frequency_6K">6K</string>
    <string name="dolby_equalizer_frequency_845">845</string>
    <string name="dolby_equalizer_frequency_95">95</string>
    <string name="dolby_equalizer_frequency_9K">9K</string>
    <string name="dolby_equalizer_title">Equalizer</string>
    <string name="dolby_music_equalizer_tab_close">None</string>
    <string name="dolby_music_equalizer_tab_dance">Dance</string>
    <string name="dolby_music_equalizer_tab_electron">Electronic</string>
    <string name="dolby_music_equalizer_tab_jazz">Jazz</string>
    <string name="dolby_music_equalizer_tab_pop">Pop</string>
    <string name="dolby_music_equalizer_tab_self_define">Customer</string>
    <string name="dolby_music_mode_high_effect_close_title">None</string>
    <string name="dolby_music_mode_high_effect_layout_title">Premium sound effects</string>
    <string name="dolby_music_mode_high_effect_live_rhythm_title">Live groove</string>
    <string name="dolby_music_mode_high_effect_mega_bass_title">Power bass</string>
    <string name="dolby_music_mode_high_effect_pure_life_title">Pure voices</string>
    <string name="dolby_music_mode_high_effect_warm_soft_title">Warm gentle</string>
    <string name="dolby_preference_summary">Enjoy the moving audio and stunningly realistic surround sound experience.</string>
    <string name="dolby_profile_ai">Dynamic</string>
    <string name="dolby_profile_movie">Movie</string>
    <string name="dolby_profile_music">Music</string>
    <string name="dolby_profile_title">Sound mode</string>
    <string name="dolby_sound">Dolby sound</string>
    <string name="dolby_video_enhancer_title">Dialog Enhancer</string>
    <string name="game_dolby_atmos_explanation">震撼的环绕立体效果，让你的游戏体验提高一个新境界</string>
    <string name="game_dolby_atmos_mode">Game mode</string>
    <string name="movie_dolby_audio_mode_describe">Dolby Atmos® is a set of surround sound technologies that is widely used in cinemas. %1$s has teamed up with Dolby to bring you a stunningly realistic surround sound experience.</string>
    <string name="movie_dolby_effect_tv_1">Moving audio</string>
    <string name="movie_dolby_effect_tv_2">Clear dialogs</string>
    <string name="movie_dolby_effect_tv_3">Spatial effects</string>
    <string name="music_dolby_atmos_explanation">Full and delicate sounds to touch your heart with every note and beat</string>
    <string name="music_dolby_atmos_mode">Music mode</string>
    <string name="music_dolby_audio_mode_describe">%1$s integrates Dolby panoramic sound technology in its mobile phones to offer more vivid and detailed audio quality. Now, you can enjoy breathtaking and hyper-realistic audio experiences on your mobile phone.</string>
    <string name="music_dolby_effect_tv_1">Delicate tones</string>
    <string name="music_dolby_effect_tv_2">High resolution</string>
    <string name="music_dolby_effect_tv_3">Distinct bands</string>
    <string name="video_dolby_atmos_explanation">Realistic spatial sounds and clearer dialogues to make the storyline come alive around you</string>
    <string name="video_dolby_atmos_mode">Video mode</string>
    <string name="custom_sound_on_slide_on">Slide On</string>
    <string name="custom_sound_on_slide_off">Slide Off</string>
</resources>
