<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen android:title="@string/dolby_atmos_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <moe.chenxy.extrasettings.dolby.LayoutPreference android:layout="@layout/dolby_atmos_header" android:key="dolby_atmos_header" />
    <PreferenceCategory android:layout="@layout/dolby_preference_dash_line_high" android:title="@string/dolby_atmos_mode" android:key="dolby_atmos_mode">
        <moe.chenxy.extrasettings.dolby.DolbyAtmosRadioPreference android:persistent="false" android:title="@string/music_dolby_atmos_mode" android:key="music_dolby_mode" />
        <moe.chenxy.extrasettings.dolby.DolbyAtmosRadioPreference android:persistent="false" android:title="@string/video_dolby_atmos_mode" android:key="video_dolby_mode" />
        <moe.chenxy.extrasettings.dolby.DolbyAtmosRadioPreference android:persistent="false" android:title="@string/ai_dolby_atmos_mode" android:key="ai_dolby_mode" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>